<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="64dp"
                android:layout_marginLeft="64dp"
                android:background="@drawable/btn_bg_selector"
                android:padding="8dp"
                android:text="@string/button11"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#FDFEFE"/>
            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="64dp"
                android:layout_marginLeft="64dp"
                android:background="@drawable/btn_bg_selector"
                android:padding="8dp"
                android:text="@string/button12"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#FDFEFE"/>

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="64dp"
                android:layout_marginLeft="64dp"
                android:background="@drawable/btn_bg_selector"
                android:padding="8dp"
                android:text="@string/button13"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#FDFEFE"/>
            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="64dp"
                android:layout_marginLeft="64dp"
                android:background="@drawable/btn_bg_selector"
                android:padding="8dp"
                android:text="@string/button14"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#FDFEFE"/>
            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="64dp"
                android:layout_marginLeft="64dp"
                android:background="@drawable/btn_bg_selector"
                android:padding="8dp"
                android:text="@string/button15"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#FDFEFE"/>
            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="64dp"
                android:layout_marginLeft="64dp"
                android:background="@drawable/btn_bg_selector"
                android:padding="8dp"
                android:text="@string/button16"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#FDFEFE"/>
            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="64dp"
                android:layout_marginLeft="64dp"
                android:background="@drawable/btn_bg_selector"
                android:padding="8dp"
                android:text="@string/button17"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#FDFEFE"/>
            <Button
                android:id="@+id/button18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="64dp"
                android:layout_marginLeft="64dp"
                android:background="@drawable/btn_bg_selector"
                android:padding="8dp"
                android:text="@string/button18"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#FDFEFE"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>